--- a/calendar.html
+++ b/calendar.html
@@ -198,10 +198,10 @@
       <button type="submit" id="bookVehicleBtn" class="action-button">Book Vehicle</button>
     </form>
 
-    <!-- SIGN OUT & RETURN BUTTONS -->
-    <button id="signOutBtn" class="action-button">Sign Out Selected Vehicle Now</button>
-    <button id="returnVehicleBtn" class="action-button">Return Vehicle Now</button>
-  </div>
+    <!--
+<button id="signOutNowBtn">Sign Out Selected Vehicle Now</button>
+<button id="returnNowBtn">Return Vehicle Now</button>
+-->
 
   <!-- CALENDAR + DETAILS WRAPPER -->
   <div class="calendar-and-details">
